# cas-dl-genai-games

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY.md  Makefile  README.md  app.py  pyproject.toml
.claude/skills/lambda-labs/: SKILL.md
.claude/skills/makefile/: SKILL.md
.claude/skills/notebooks/: SKILL.md
.devcontainer/: cli-tools.sh  devcontainer.json  post-create.sh  post-start.sh
data/: models.json  rounds.json  tasks.json
src/genai_cv_game/: config.py  db.py  generation.py  model_catalog.py  models.py  rounds.py  storage.py  tasks.py  utils.py
src/genai_cv_game/ui/: admin.py  gallery.py  instructor.py  student.py  vote.py
tests/: test_config.py  test_db.py  test_drafts.py  test_gallery_results.py  test_generation_stub.py  test_generations.py  test_models_catalog.py  test_rounds.py  test_student_reconcile.py  test_tasks.py  test_utils.py  test_votes.py
